[gd_scene load_steps=2 format=3 uid="uid://brhyqx8gnwmcx"]

[ext_resource type="Script" uid="uid://dp5xbhbi5oxah" path="res://Gameplay/Pit/start_game_btn.gd" id="1_mrstu"]

[node name="StartGameBtn" type="Area2D"]
script = ExtResource("1_mrstu")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
